--- a/app.css
+++ b/app.css
@@ -1,19 +1,16 @@
-html {
-  box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
+  overflow-y: hidden;
 }
 
 body {
@@ -87,4 +84,62 @@ section {
 
 .blue {
   border: 2px solid blue;
+}
+
+button {
+  padding: 5px 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 3px groove #a9a9a9;
+  display: block;
+  margin: auto;
+}
+
+.modal {
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 8% auto;
+  width: 50%;
+  height: 400px;
+  background: #fff;
+  padding: 20px 30px;
+  z-index: 2;
+  display: none;
+}
+
+span.close_modal {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 2rem;
+}
+
+.love {
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #a9a9a9;
+  opacity: 0.7;
+  z-index: 1;
+  display: none;
+}
+
+.winningMessage {
+  margin: 40px 0px;
 }
