--- a/app.css
+++ b/app.css
@@ -1,3 +1,8 @@
+:root {
+  --text-main: #1c2b34;
+  --text-secondary: #8d96a1;
+}
+
 *,
 *::before,
 *::after {
@@ -11,6 +16,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-y: hidden;
+  font-size: 1em;
 }
 
 body {
@@ -18,128 +24,100 @@ body {
   font-size: 1rem;
 }
 
-h1,
-h2 {
+.title--primary {
+  font-size: 4rem;
+  text-align: center;
+  margin: 1rem;
+  color: var(--text-main);
+}
+
+.title--subheader {
   font-size: 3rem;
   text-align: center;
-  margin: 20px;
+  margin: 1rem;
+  color: var(--text-secondary);
 }
 
-h2 {
-  color: #a9a9a9;
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-h3 {
-  text-align: center;
+.controls__title {
+  font-size: 2rem;
+  color: var(--text-main);
 }
-
-#myStars,
-#oppStars,
-.myHands,
-.oppHands {
-  text-align: center;
-  padding: 0;
+.controls__score {
+  font-size: 1.5rem;
+  color: var(--text-main);
 }
-
-#myStars li,
-#oppStars li,
-.myHands li,
-.oppHands li {
+.controls__score,
+.controls__choices {
   list-style: none;
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-
-.myHands img,
-.oppHands img {
-  width: 12vw;
+.controls__choices {
+  align-items: center;
 }
-
-/* .oppHands img {
-  width: 20vw;
-  transition: ease width 0.3s;
-} */
 
 .flex-container {
   display: flex;
   margin-top: 50px;
 }
-
-section {
+.flex-container > section {
   flex-grow: 1;
 }
 
-.reset {
-  padding-left: 20px;
+.option {
+  width: 12vw;
+  transition: ease width 0.3s, ease opacity 0.3s;
 }
-
-.hide {
-  display: none;
-}
-
-.myHands img.enlarge,
-.oppHands img.enlarge {
+.option--focus {
   width: 20vw;
-  transition: ease width 0.3s;
+}
+.option--blur {
+  width: 5vw;
+  opacity: 0.4;
 }
 
-.blue {
-  border: 2px solid blue;
-}
-
-button {
-  padding: 5px 10px;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: 3px groove #a9a9a9;
+.button {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  border: 2px solid var(--text-main);
   display: block;
   margin: auto;
+  color: var(--text-main);
+}
+
+.image--center {
+  display: block;
+  margin: auto;
+  width: 50%;
 }
 
 .modal {
-  border-radius: 10px;
-  position: absolute;
+  position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   bottom: 0;
-  left: 0;
-  margin: 8% auto;
-  width: 50%;
-  height: 400px;
-  background: #fff;
-  padding: 20px 30px;
-  z-index: 2;
+  right: 0;
   display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-span.close_modal {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  font-size: 2rem;
+.modal__wrapper {
+  background-color: white;
+  min-width: 40vw;
+  max-width: 50vw;
+  padding: 2rem;
+  border-radius: 0.25rem;
 }
 
-.love {
-  display: block;
-  margin: auto;
-  width: 50%;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #a9a9a9;
-  opacity: 0.7;
-  z-index: 1;
-  display: none;
-}
-
-.winningMessage {
-  margin: 40px 0px;
+.modal__content {
+  margin: 2rem 0px;
+  text-align: center;
 }
